[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://Manual/WebBrowswer.gd" id="1_dfpua"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uiyts"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bsl1o"]
bg_color = Color(0.800491, 0.800491, 0.800491, 1)

[node name="WebBrowswer" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_uiyts")
metadata/_tab_index = 3

[node name="GDCef" type="GDCef" parent="." node_paths=PackedStringArray("display", "url", "url_status")]
script = ExtResource("1_dfpua")
display = NodePath("../VBoxContainer/PanelContainer/DisplayTexture")
url = NodePath("../VBoxContainer/MarginContainer/HBoxContainer/URL")
url_status = NodePath("../VBoxContainer/MarginContainer/HBoxContainer/URL_Status")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="GoBack" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "BUTTON_GO_BACK_TOOLTIP"
text = "BUTTON_GO_BACK"

[node name="GoNext" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "BUTTON_GO_NEXT_TOOLTIP"
text = "BUTTON_GO_NEXT"

[node name="URL" type="LineEdit" parent="VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="URL_Status" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "BUTTON_ENTER_TOOLTIP"
text = "BUTTON_ENTER"

[node name="Reload" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "BUTTON_REFRESH_TOOLTIP"
text = "BUTTON_REFRESH"

[node name="Stop" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "BUTTON_STOP_TOOLTIP"
text = "BUTTON_STOP"

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_bsl1o")

[node name="DisplayTexture" type="TextureRect" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 3

[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/GoBack" to="GDCef" method="_on_go_back_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/GoNext" to="GDCef" method="_on_go_next_pressed"]
[connection signal="text_changed" from="VBoxContainer/MarginContainer/HBoxContainer/URL" to="GDCef" method="_on_url_text_changed"]
[connection signal="text_submitted" from="VBoxContainer/MarginContainer/HBoxContainer/URL" to="GDCef" method="open_url"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/URL_Status" to="GDCef" method="_on_enter_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/Reload" to="GDCef" method="_on_reload_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/Stop" to="GDCef" method="_on_stop_pressed"]
